Add custom header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,6 +30,8 @@
         <% end %>
       </h1>
 
+      <%= render "layouts/custom_header" %>
+
       <div id="responsive-menu">
         <div class="top-bar-right">
           <ul class="menu" data-responsive-menu="medium-dropdown">
