--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -25,7 +25,7 @@
 <% else %>
   <li>
     <%= link_to t("devise_views.menu.login_items.login"),
-                new_user_session_path, rel: "nofollow" %>
+                new_user_session_path, rel: "nofollow", class: "sign-in-link" %>
   </li>
   <li>
     <%= link_to t("devise_views.menu.login_items.signup"),
