Users verification with local census and SMS

--- a/app/views/admin/local_census_records/_local_census_record.html.erb
+++ b/app/views/admin/local_census_records/_local_census_record.html.erb
@@ -6,12 +6,12 @@
     <%= local_census_record.document_number %>
   </td>
   <td>
-    <%= l local_census_record.date_of_birth %>
+    <%= local_census_record.phone_number %>
   </td>
   <td>
-    <%= local_census_record.postal_code %>
+    <%= local_census_record.gender %>
   </td>
   <td>
-    <%= render Admin::TableActionsComponent.new(local_census_record) %>
+    <%= local_census_record.neighborhood %>
   </td>
 </tr>
