--- a/app/views/admin/local_census_records/_local_census_records.html.erb
+++ b/app/views/admin/local_census_records/_local_census_records.html.erb
@@ -5,9 +5,9 @@
       <tr>
         <th><%= t("admin.local_census_records.index.document_type") %></th>
         <th><%= t("admin.local_census_records.index.document_number") %></th>
-        <th><%= t("admin.local_census_records.index.date_of_birth") %></th>
-        <th><%= t("admin.local_census_records.index.postal_code") %></th>
-        <th><%= t("admin.actions.actions") %></th>
+        <th><%= t("admin.local_census_records.index.phone_number") %></th>
+        <th><%= t("admin.local_census_records.index.gender") %></th>
+        <th><%= t("admin.local_census_records.index.neighborhood") %></th>
       </tr>
     </thead>
     <tbody>
