--- a/app/views/account/show.html.erb
+++ b/app/views/account/show.html.erb
@@ -1,4 +1,5 @@
 <div class="row account">
+  <% track_event(category: "verification", action: "success_sms") %>
   <div class="small-12 column">
     <div class="float-right text-right">
       <%= link_to t("account.show.change_credentials_link"), edit_user_registration_path, class: "button hollow" %>
