--- a/app/views/admin/local_census_records/_form.html.erb
+++ b/app/views/admin/local_census_records/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="small-12">
-      <%= f.select :document_type, document_types, prompt: "" %>
+      <%= f.select :document_type, document_types %>
     </div>
   </div>
 
