--- a/app/views/management/document_verifications/index.html.erb
+++ b/app/views/management/document_verifications/index.html.erb
@@ -15,19 +15,9 @@
       <%= f.text_field :document_number %>
     </div>
 
-    <% if Setting.force_presence_date_of_birth? %>
-      <div class="date-of-birth small-12 medium-5">
-        <%= f.date_select :date_of_birth,
-                          prompt: true,
-                          start_year: 1900, end_year: minimum_required_age.years.ago.year %>
-      </div>
-    <% end %>
-
-    <% if Setting.force_presence_postal_code? %>
-      <div class="small-12 medium-5">
-        <%= f.text_field :postal_code, aria: { describedby: "postal-code-help-text" } %>
-      </div>
-    <% end %>
+    <div class="small-12 medium-5">
+      <%= f.text_field :phone_number %>
+    </div>
 
     <%= f.submit t("management.check"), class: "button" %>
   <% end %>
