--- a/app/views/verification/residence/new.html.erb
+++ b/app/views/verification/residence/new.html.erb
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="small-12 medium-8">
           <div class="small-12 medium-3 column">
-          <%= f.select :document_type, document_types, prompt: "" %>
+          <%= f.select :document_type, document_types %>
           </div>
           <div class="small-12 medium-5 column end">
 
@@ -62,15 +62,8 @@
         </div>
       </div>
 
-      <div class="date-of-birth small-12 medium-6 clear">
-      <%= f.date_select :date_of_birth,
-                        prompt: true,
-                        start_year: 1900, end_year: minimum_required_age.years.ago.year %>
-      </div>
-
       <div class="small-12 medium-5 clear">
-        <%= f.text_field :postal_code,
-          hint: t("verification.residence.new.postal_code_note") %>
+        <%= f.text_field :phone_number %>
       </div>
 
       <div class="small-12">
