Changes phone number text to number field

--- a/app/views/management/document_verifications/index.html.erb
+++ b/app/views/management/document_verifications/index.html.erb
@@ -16,7 +16,7 @@
     </div>
 
     <div class="small-12 medium-5">
-      <%= f.text_field :phone_number %>
+      <%= f.number_field :phone_number %>
     </div>
 
     <%= f.submit t("management.check"), class: "button" %>
