--- a/app/views/officing/residence/new.html.erb
+++ b/app/views/officing/residence/new.html.erb
@@ -14,7 +14,7 @@
       </div>
 
       <div class="small-12 medium-6">
-        <%= f.text_field :phone_number %>
+        <%= f.number_field :phone_number %>
       </div>
 
       <div class="small-12 medium-6">
