Add custom mask for verification telephone input field

--- a/app/views/verification/residence/new.html.erb
+++ b/app/views/verification/residence/new.html.erb
@@ -63,7 +63,7 @@
       </div>
 
       <div class="small-12 medium-5 clear">
-        <%= f.number_field :phone_number, hint: t("verification.residence.new.phone_number_help_text") %>
+        <%= f.text_field :phone_number, hint: t("verification.residence.new.phone_number_help_text") %>
       </div>
 
       <div class="small-12">
