--- a/app/views/officing/residence/new.html.erb
+++ b/app/views/officing/residence/new.html.erb
@@ -14,7 +14,7 @@
       </div>
 
       <div class="small-12 medium-6">
-        <%= f.number_field :phone_number %>
+        <%= f.number_field :phone_number, hint: t("verification.residence.new.phone_number_help_text") %>
       </div>
 
       <div class="small-12 medium-6">
